<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/my_t" android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/my_posts" />
        <item android:id="@+id/top_t" android:icon="@android:drawable/ic_menu_add"
            android:title="@string/top_posts" />
        <item android:id="@+id/new_t" android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/new_posts" />
        <item android:id="@+id/close_t" android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/closest_posts"/>

    </group>

    <item android:title="Andet">
        <menu>
            <item android:id="@+id/inst" android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item android:id="@+id/logout" android:icon="@drawable/shutdown"
            android:title="@string/logout"/>
        </menu>
    </item>

</menu>