<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tooles="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#808080">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/yourusername"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/yourUsername"
            android:layout_alignBottom="@+id/profilName"
            android:layout_alignParentStart="true"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="normal"
            tools:text="@string/Username"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:id="@+id/profilName"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/yourUsername"
            android:paddingLeft="25dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/yourspirit"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:id="@+id/yourAnim"
            android:layout_below="@+id/yourUsername"
            android:layout_alignParentStart="true"
            android:layout_marginTop="114dp"
            />


        <ImageButton
            android:layout_width="125dp"
            android:layout_height="125dp"

            android:background="@drawable/roundbutton"
            android:id="@+id/spiritAnim"
            android:layout_marginEnd="45dp"
            android:layout_below="@+id/yourUsername"
            android:layout_marginTop="42dp"
            android:src="@drawable/crab"
            android:layout_toRightOf="@+id/yourAnim"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/change_animal"
            android:textSize="13dp"
            android:textColor="@color/white"
            android:id="@+id/changeAnim"
            android:layout_below="@+id/spiritAnim"
             />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/change_pass"
            android:id="@+id/changePassword"
            android:background="@drawable/newbutton"
            android:layout_marginTop="44dp"
            android:layout_below="@+id/changeAnim"
            android:layout_centerHorizontal="true" />





    </RelativeLayout>
</LinearLayout>