<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/Username"
        android:textColorHint="#000000"
        android:id="@+id/username"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/password"
        android:textColorHint="#000000"
        android:id="@+id/password1"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/Confirm_password"
        android:textColorHint="#000000"
        android:id="@+id/confirm_password1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:id="@+id/confirm"
        android:layout_gravity="center_horizontal" />

</LinearLayout>